--- a/APBDProject/Views/OwnerView.xaml
+++ b/APBDProject/Views/OwnerView.xaml
@@ -1,30 +1,40 @@
-﻿<Window x:Class="APBDProject.MainWindow"
+﻿<Window x:Class="APBDProject.Views.OwnerView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="Car Reviews" Height="500" Width="978"
-        MinHeight="200"
+        Title="Owner View" Height="500" Width="978"
+        MinHeight="400"
         MinWidth="300"
         WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition />
-            <RowDefinition Height="Auto" />
+            <RowDefinition Height="120"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-        </Grid.ColumnDefinitions>
+        <DockPanel Grid.Row="0">
 
-        <Menu>
-            <MenuItem Header="File">
-                <MenuItem Click="MenuItem_Add_Car_Click"  Header="Add new car"/>
-                <MenuItem Click="MenuItem_Add_Owner_Click"  Header="Add new owner"/>
-            </MenuItem>
-        </Menu>
+            <Image x:Name="ownerPhoto" Width="100" Height="100" Grid.Row="0" Margin="25, 10, 25, 10" VerticalAlignment="Center">
+                <Image.Clip>
+                    <EllipseGeometry
+                        RadiusX="45"
+                        RadiusY="45"
+                        Center="50,50"/>
+                </Image.Clip>
+            </Image>
 
+            <Grid VerticalAlignment='Center'>
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition />
+                </Grid.RowDefinitions>
+
+                <Label x:Name="ownerNameTitle" Padding="0"  Grid.Row="0" Content="Owner"  VerticalAlignment="Bottom" FontWeight="Bold" FontSize="22"/>
+                <Label x:Name="ownerLocation" Padding="0" Grid.Row="1" VerticalAlignment="Top" Content="Location" FontSize="22" />
+            </Grid>
+
+        </DockPanel>
         <ListBox HorizontalAlignment="Center"  BorderThickness="0" ScrollViewer.HorizontalScrollBarVisibility="Disabled"  x:Name="carsListBox"  Grid.Row="1" VerticalAlignment="Top" >
 
             <ListBox.ItemsPanel>
@@ -36,14 +46,14 @@
             <ListBox.ItemTemplate>
                 <DataTemplate>
 
-                    <Grid Background="#4CFFFFFF"  MouseDown="TextBlock_MouseDown">
+                    <Grid Background="#4CFFFFFF">
                         <Grid.RowDefinitions>
                             <RowDefinition/>
                             <RowDefinition/>
                             <RowDefinition/>
                             <RowDefinition/>
                         </Grid.RowDefinitions>
-                        <Image   Grid.Row="1" Source="{Binding Image}" Stretch="UniformToFill" Width="300" HorizontalAlignment="Stretch" Height="200" />
+                        <Image  MouseDown="TextBlockMouseDown" Grid.Row="1" Source="{Binding Image}" Stretch="UniformToFill" Width="300" HorizontalAlignment="Stretch" Height="200" />
                         <TextBlock Margin="0, 5, 0, 0" Grid.Row="2"  FontSize="16" VerticalAlignment="Center" FontWeight="Bold">
                             <TextBlock.Text>
                                 <MultiBinding StringFormat="{}{0} {1}">
@@ -64,6 +74,5 @@
                 </Style>
             </ListBox.ItemContainerStyle>
         </ListBox>
-
     </Grid>
 </Window>
