--- a/APBDProject/Views/AddCar.xaml
+++ b/APBDProject/Views/AddCar.xaml
@@ -6,9 +6,9 @@
         mc:Ignorable="d"
         Title="AddCar" 
         Height="700" Width="500"
-        MinHeight="400"
+        MinHeight="400" MinWidth="300"
         Background="#F4F4F4"
-        MinWidth="300">
+        WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="70"/>
