--- a/APBDProject/Views/AddNewOwner.xaml
+++ b/APBDProject/Views/AddNewOwner.xaml
@@ -6,9 +6,9 @@
         mc:Ignorable="d"
         Title="Add Owner" 
         Height="400" Width="400"
-        MinHeight="400"
+        MinHeight="400" MinWidth="300"
         Background="#F4F4F4"
-        MinWidth="300">
+        WindowStartupLocation="CenterScreen">
     <Grid>
         
         
